--- a/ckjm/pom.xml
+++ b/ckjm/pom.xml
@@ -8,5 +8,27 @@
     <artifactId>ckjm</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+    <dependency>
+        <groupId>org.apache.ant</groupId>
+        <artifactId>ant</artifactId>
+        <version>1.10.5</version>
+    </dependency>
+
+    <dependency>
+            <groupId>org.apache.bcel</groupId>
+            <artifactId>bcel</artifactId>
+            <version>6.0</version>
+    </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
